--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "jorrmaglione/waapi",
   "type": "library",
   "license": "MIT",
+  "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
       "Jorrmaglione\\Waapi\\": "src/"
